test/Fail/Issue1140.err
Issue1140.agda:6.3-7.8: error: [TerminationIssue]
Termination checking failed for the following functions:
  M.f
Problematic calls:
  f (at Issue1140.agda:7.7-8)

Issue1140.agda:10.3-11.8: error: [TerminationIssue]
Termination checking failed for the following functions:
  N.f
Problematic calls:
  f (at Issue1140.agda:11.7-8)
